@startuml

title __SCENARIOS's Class Diagram__\n

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace scenarios {
      class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance {
          + ScenMvtCollisionAvoidance()
          # AfterActivate()
          # initializeSimEntity()
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace scenarios {
      class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotActivate {
          + Process()
          + RobotActivate()
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace scenarios {
      class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotInitialize {
          + Process()
          + RobotInitialize()
          + getRf()
          + getRi()
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace scenarios {
      class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.WallArrival {
          + Process()
          + WallArrival()
          + getWf()
          + getWi()
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace scenarios {
      class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidanceFeatures {
          - robots : HashMap<RobotInit, RobotFeatures>
          - walls : HashMap<WallInit, WallFeatures>
          + ScenMvtCollisionAvoidanceFeatures()
          + getRobots()
          + getWalls()
      }
    }
  }
  

  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance -up-|> enstabretagne.simulation.components.implementation.SimScenario
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance +-down- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotActivate
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance +-down- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotInitialize
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance +-down- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.WallArrival
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotActivate -up-|> enstabretagne.simulation.core.implementation.SimEvent
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotActivate o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Robot.Robot : r
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotInitialize -up-|> enstabretagne.simulation.core.implementation.SimEvent
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotInitialize o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Robot.RobotFeatures : rf
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.RobotInitialize o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Robot.RobotInit : ri
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.WallArrival -up-|> enstabretagne.simulation.core.implementation.SimEvent
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.WallArrival o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallFeatures : wf
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidance.WallArrival o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallInit : wi
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.scenarios.ScenMvtCollisionAvoidanceFeatures -up-|> enstabretagne.simulation.components.data.SimFeatures


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
